static/core/css/portfolio.css
/* this gets rid of the bottom dots */
.container-full {
  width: 100%;
  max-width: 1600px;
  border-radius: 0px;
}

/* Background */
@media (min-width: 768px) and (max-width: 2560px) {

  .portfolio-full {
    background-image: url(/static/core/img/img-portfolio-tentacle-right.png),
      url(/static/core/img/img-portfolio-tentacle-left.png),
      url(/static/core/img/img-portfolio-cube-right.png),
      url(/static/core/img/img-portfolio-curl-left.png),
      url(/static/core/img/img-portfolio-cloud.png),
      url(/static/core/img/img-portfolio-cube-left-full.png),
      url(/static/core/img/img-portfolio-cloud-right-2.png),
      url(/static/core/img/img-portfolio-cloud-2.png),
      url(/static/core/img/img-portfolio-cube-center.png),
      url(/static/core/img/img-portfolio-cloud-left.png),
      url(/static/core/img/img-portfolio-001.png);
    background-position: 100% 36%,
      0% 72.5%,
      100% 76%,
      0% 81%,
      0% -2%,
      0% 64%,
      85% 61.5%,
      0% 93%,
      100% 91%,
      0% 3%,
      105% -0.5%;
    background-repeat: no-repeat;
  }
}


@media (max-width: 768px) {
  .portfolio-full {
    background-image: url(/static/core/img/img-portfolio-tentacle-right.png),
      url(/static/core/img/img-portfolio-tentacle-right.png),
      url(/static/core/img/img-portfolio-cube-left.png),
      url(/static/core/img/img-portfolio-swirly-right.png),
      url(/static/core/img/img-portfolio-cloud.png),
      url(/static/core/img/img-portfolio-cube-left-full.png),
      url(/static/core/img/img-portfolio-cloud-right-2.png),
      url(/static/core/img/img-portfolio-cloud-2.png),
      url(/static/core/img/img-portfolio-cube-center.png);
    background-position: 100% 35%,
      100% 72.5%,
      0% 77%,
      100% 80.5%,
      0% -1%,
      0% 64%,
      85% 61.5%,
      0% 90%,
      100% 88.1%;
    background-repeat: no-repeat;
    background-size: 20%,
      20%,
      30%,
      30%,
      100%,
      50%,
      100%,
      100%,
      70%;
  }
}

/* General  */
.portfolio-container {
  margin-bottom: 10rem;
}

.portfolio-container .title {
  color: #2b2b2b;
  line-height: 80px;
  font-size: 82px;
  font-weight: 700;
  margin-bottom: 2rem;
  text-align: left;
  margin-top: 1rem;
}

.portfolio-container .title::first-letter {
  font-size: 129px;
  background-image: url("/static/core/img/monadical-blue-grey-logo.png");
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center left;
  color: transparent;
  margin-left: 10px;
}

.portfolio-container .slogan {
  color: #333333;
  line-height: 36px;
  font-size: 32px;
  font-weight: 400;
  font-style: normal;
  margin-bottom: 3rem;
  text-align: left;
}

.portfolio-container .section-title {
  font-size: 60px;
  font-weight: 600;
  line-height: 80px;
  margin: 3rem 0;
  text-align: center;
}

.portfolio-container .subtitle {
  font-size: 30px;
  font-weight: 700;
  line-height: 36px;
  margin-bottom: 1.5rem;
}

.portfolio-container a {
  color: #0086b4;
  text-decoration: underline;
  text-underline-offset: 20%;
}

.portfolio-container .btn-info-inverse {
  line-height: 1.25rem;
  text-transform: uppercase;
}

.portfolio-container .image-row {
  justify-content: space-between;
}

@media (max-width: 768px) {
  .portfolio-container {
    margin-bottom: 4rem;
  }

  .portfolio-container .title {
    font-size: 30px;
    line-height: 45px;
    margin-bottom: 16rem;
    text-align: center;
  }

  .portfolio-container .title::first-letter {
    font-size: 50px;
    line-height: 45px;
    background-image: url("/static/core/img/monadical-blue-grey-logo.png");
    background-size: 100%;
    background-repeat: no-repeat;
    background-position: center left;
    color: transparent;
  }

  .portfolio-container .slogan {
    color: #333333;
    line-height: 20px;
    font-size: 18px;
    font-weight: 400;
    font-style: normal;
    margin-bottom: 2rem;
    text-align: center;
  }

  .portfolio-container .section-title {
    font-size: 22px;
    line-height: 33px;
    margin: 2rem 0;
  }

  .portfolio-container .subtitle {
    font-size: 18px;
    line-height: 22px;
    margin-bottom: 1rem;
  }

  .portfolio-container .carousel-inner {
    overflow: visible;
  }

  .portfolio-container .carousel-item img {
    border-radius: 10px;
    object-fit: cover;
    height: 300px;
  }

  .portfolio-container .carousel-indicators li {
    background: rgba(129, 129, 130);
    height: 0.5rem;
    width: 0.5rem;
  }

  .portfolio-container .carousel-indicators .active {
    background: #0086b4;
  }
}

/* Table of Contents */
#table-of-contents {
  margin-top: 6rem;
}

#table-of-contents li {
  margin-bottom: 1rem;
  list-style: square outside;
}

#table-of-contents .collapse-trigger .fa-caret-down {
  margin-left: 0.5rem;
  transition: all 0.5s;
  transform-origin: center;
}

#table-of-contents .collapse-trigger.active .fa-caret-down {
  transform: rotate(180deg);
}

#table-of-contents .collapse-trigger,
#table-of-contents a {
  border: none;
  color: #2b2b2b;
  cursor: pointer;
  font-size: 20px;
  font-weight: 700;
  line-height: 24px;
  padding: 0;
  text-decoration: none;
}

#table-of-contents .outer-list {
  background: rgba(255, 255, 255, 0.7);
  border-radius: 10px;
  font-size: 20px;
  font-weight: 700;
}

#table-of-contents .outer-list li::marker {
  color: #0086b4;
}

#table-of-contents .inner-list {
  color: #818182;
  font-size: 18px;
  font-weight: 400;
  line-height: 22px;
  padding: 1rem 1rem 0 1rem;
}

#table-of-contents .inner-list li::marker {
  color: #818182;
  font-size: 20px;
}

#table-of-contents .inner-list a {
  color: #818182;
  cursor: pointer;
  text-decoration: none;
  font-size: 18px;
  font-weight: 600;
}

#table-of-contents .scroll-down {
  padding: 8rem 0;
  text-decoration: none;
}

#table-of-contents .scroll-down span,
#table-of-contents .scroll-down i {
  line-height: 1.5rem;
  font-size: 18px;
  font-weight: normal;
}
/* ... */

